[workspace]
members = [
	".", "common",
	"graphics",
	"sim"
]

[workspace.dependencies]
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-text = "0.7.0"
image = "0.25.1"
serde = "1.0.197"

[package]
name = "esp-display"
version = "0.1.0"
authors = ["tsar-boomba <itg.2048@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
st7735-lcd = "0.10.0"
graphics = { path = "./graphics" }
embedded-graphics = { workspace = true }
embedded-layout = { workspace = true }
embedded-text = { workspace = true }
common = { path = "common" }
heapless = "0.8.0"
serde = { workspace = true }
serde_json = "1.0.115"
image.workspace = true
jpeg-decoder = { version = "0.3.1", default-features = false }
crossbeam-channel = "0.5.12"

[build-dependencies]
embuild = "0.31.3"
