[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
embedded-graphics = { workspace = true }
embedded-layout = { workspace = true }
embedded-text = { workspace = true }
image = { workspace = true }
encoding_rs = "0.8.33"
unicode-segmentation = "1.11.0"
rgb565 = { version = "0.1.3", default-features = false }
embedded-canvas = "0.3.0"
